# xcl

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  RELEASE-NOTES.md  change_file_name.py  change_include.py  format_files.py  install.py  main.cc  test.c  test.txt
UnitTest/: CMakeLists.txt  main.cc
UnitTest/src/: AtomicTestImpl.c  ImplTestAtomic.c  TestAtomic.cc  TestBits.cc  TestCleaner.cc  TestLock.cc  TestRbTree.cc  TestRingBuffer.cc  TestSizeClass.cc  TestThread.cc  TestThreadLocal.cc  main.cc  test.cc
XclUnitTest/: CMakeLists.txt
XclUnitTest/src/: TestBits.cc  TestLock.cc  TestThreadLocal.cc
cmake/: Findgoogletest.cmake  common.cmake  functional.cmake  platform.cmake  util.cmake  vld.cmake
cmake/apple/: build.cmake
cmake/unix/: build.cmake
cmake/win32/: build.cmake
inc_pri/xcl/lang/: inter_thread_api.h
inc_pri/xcl/util/: rb_tree.h  trie_tree.h
inc_pub/xcl/concurrent/: cond.h  lock.h  mutex.h
inc_pub/xcl/io/: file.h  file_monitor.h
inc_pub/xcl/lang/: system.h  thread.h  thread_local.h  xcl_def.h  xcl_err.h
inc_pub/xcl/pool/: pool.h
inc_pub/xcl/util/: bit.h  blocker.h  buffer.h  bytes.h  map.h  ring_buffer.h  str.h  xcl_string.h
include/concurrent/: CCond.h  CMutex.h  Cond.h  Lock.h  Lock.hpp  Mutex.h  XclAtomic.h  cond.h  mutex.h
include/concurrent/util/: CLinkedBlockQueue.h  LinkedBlockingQueue.h
include/ini/: Cfg.h  IniParse.h  cfg.h  iniparse.h
include/internal/: xcl.h
include/internal/concurrent/: atomic.h
include/internal/lang/: local_reserve_id.h  local_storage.h  os_api.h  os_local.h
include/internal/util/: handle_pool.h  handle_table.h  hash_table.h  log_file_writer.h  log_format.h  log_impl.h  log_manager.h  object_pool.h  rb.h  str_impl.h  tree_impl.h
include/lang/: CAssertUtil.h  CThread.h  CThreadLocal.h  InterThreadApi.h  LocalStorage.h  System.h  Thread.h  ThreadLocal.h  XclErr.h  assertion.h  cassertion.h  interthreadapi.h  localstorage.h  platform.h  thread.h
include/pool/: Pool.h  SizeClass.h  pool.h  pool.hpp  sizeclass.h
include/util/: Algo.h  Bits.h  Blocker.h  Buffer.h  Bytes.h  CBits.h  CBuffer.h  CList.h  CString.h  File.h  List.h  RbTree.h  RingBuffer.h  SingleList.h  Str.h  XclString.h  blocker.h  buffer.h  bytes.h  list.h  rbtree.h  ringbuffer.h  singlelist.h  str.h  system.h  xclstring.h
include/xcl/concurrent/: Cond.h  Lock.h  XclAtomic.h  condition.h  mutex.h  xcl_atomic.h
include/xcl/ini/: Cfg.h  ini_parse.h
include/xcl/io/: File.h  FileMonitor.h  file_monitor.h  path.h
include/xcl/lang/: Handle.h  InterThreadApi.h  System.h  Thread.h  ThreadLocal.h  XclErr.h  alloc.h  copyable.h  define.h  functional_runnable.h  handle_table.h  int128.h  inter_thread_api.h  lazy_handler.h  local_storage.h  null.h  object_interface.h  platform.h  runnable.h  system.h  thread.h  thread_local.h  xcl_def.h
include/xcl/pool/: Pool.h  pool_def.h  size_class.h
include/xcl/util/: Algo.h  Bits.h  Blocker.h  File.h  List.h  RbTree.h  RingBuffer.h  SingleList.h  Str.h  algo.h  base64.h  byte_buffer.h  bytes.h  callable.h  comparator.h  comparators.h  crc.h  dl_module.h  factory.h  functional.h  handle.h  hash_iter.h  hash_map.h  hash_set.h  heap.h  json.h  list.h  log.h  map.h  object_util.h  page.h  pair.h  rb_tree.h  releasable.h  set.h  single_list.h  slice_list.h  string.h  tree_iter.h  trie_tree.h  (+1 more)
internal/inc/lang/: Bytes.h  CBytes.h  CLocalStorage.h  bytes.h
internal/inc/pool/: PoolDef.h  SizeClass.h
internal/inc/util/: CSingleList.h
internal/src/lang/: Bytes.c  CBytes.c  CLocalId.c  CLocalStorage.c  FreeIdQueue.cc  LocalStorageInitializer.cc  bytes.c
internal/src/pool/: SizeClass.c  SizeClassTxt.txt
internal/src/util/: CSingleList.c
scripts/: .cmake-format.json  format.sh
src/common/: xcl.cpp
src/common/lang/: err.c  local_storage.c
src/common/tests/: test_have_atomic.c
src/common/util/: base64.c  dl_module.c  handle_pool.c  hash_iter.c  hash_map.c  hash_set.c  heap.c  list.c  (+10 more)
src/concurrent/: GlobalLock.c  Lock.cc  XclAtomic.c  lock.cc  xcl_atomic.c  xclatomic.c
src/ini/: IniParse.c  cfg.c  ini_parse.c
src/lang/: CAssertUtil.c  CThreadLocal.c  Handle.c  LocalId.c  LocalStorage.c  System.c  Thread.c  ThreadLocal.c  XclErr.c  cassertion.c  handle_table.c  local_id.c  local_storage.c  localid.c  localstorage.c  thread_local.c  threadlocal.c  xcl_err.c  xclerr.c
src/pool/: Pool.c  SizeClass.c  pool.cc  size_class.c  sizeclass.c
src/util/: Algo.c  Bits.c  Blocker.c  Buffer.c  Bytes.c  CBits.c  CBuffer.c  CList.c  CString.c  List.c  RbTree.c  RingBuffer.c  SingleList.c  Str.c  XclString.c  algo.c  bit.c  buffer.c  list.c  rb_tree.c  ring_buffer.c  ringbuffer.c  single_list.c  str.c  trie_tree.c  xcl_string.c  xclstring.c
test/: TestBits.cc  TestLock.cc  TestSizeClass.cc  TestThreadLocal.cc  test_recycler.cc  test_thread.cc
tests/: CMakeLists.txt
tests/src/: main.cc  test_atomic.cc  test_byte_buffer.cc  test_concurrent_linked_queue.cc  test_concurrent_ring_queue.cc  test_executor.cpp  test_handle.cc  test_hash_map.cc  test_hash_set.cc  test_hash_table.cc  test_heap.cc  test_lbq.cpp  test_list.cc  test_local.cc  test_log.cc  test_log_manager.cc  test_log_writer.cc  test_map.cc  test_once.cpp  test_path.cc  test_set.cc  test_sleep.cc  test_slice_list.cc  test_snowflake.cc  test_spin_lock.cc  test_string.cc  test_task_signal.cc  test_thread.cc  test_vector.cc
unit_test/: CMakeLists.txt  main.cc
unit_test/src/: atomic_test_impl.c  test_bit.cc  test_bits.cc  test_file.cc  test_handle.cc  test_lock.cc  test_rb_tree.cc  test_ring_buffer.cc  test_size_class.cc  test_thread.cc  test_thread_local.cc  test_trie_tree.cc
xcl/: CMakeLists.txt
xcl/include/concurrent/util/: CLinkedBlockQueue.h
xcl/include/ini/: cfg.h
xcl/include/lang/: CThread.h
xcl/internal/inc/lang/: CLocalStorage.h
xcl/internal/src/lang/: FreeIdQueue.cc  LocalStorageInitializer.cc
xcl/internal/src/pool/: SizeClass.c
xcl/src/concurrent/windows/: CWinMutex.c
xcl/src/ini/: IniParse.c
xcl/src/lang/windows/: CWinThread.c
xcl/src/util/: CBuffer.c
(+370 files in other folders)
